Nikval-81 - Разработка дерева навигации карты развития (#82)
* Разработка дерева навигации карты развития

* NIKVAL-81 - Разработка дерева карты развития

* NIKVAL-81 - Разработка дерева карты развития

---------

Co-authored-by: msnikitin <nikms1997@yandex.ru>